--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "googlecse",
-  "version": "0.2.2",
+  "name": "stdlib-googlecse",
+  "version": "0.2.3",
   "description": "Google Custom Search Engine (CSE)",
 	"keywords": [
 		"stdlib",
